# media-metadata-plus

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  feedback.yml
.github/workflows/: build_ffmpeg_prebuilt.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/yashashm/flutter_media_metadata/: FlutterMediaMetadataPlugin.kt
android/src/main/kotlin/dev/yashashm/media_metadata_plus/: MediaMetadataPlusPlugin.kt
example/: pubspec.yaml
example/integration_test/: media_metadata_test.dart
example/integration_test/media/: .gitkeep  document.txt  photo.heic
example/lib/: main.dart
example/test/: inspect.dart
ios/: Package.swift  flutter_media_metadata.podspec  media_metadata_plus.podspec
ios/Classes/: FlutterMediaMetadataPlugin.swift  MediaMetadataPlusPlugin.swift
ios/media_metadata_plus/: Package.swift
lib/: flutter_media_metadata.dart  media_metadata_plus.dart
lib/src/models/: gps_coordinates.dart  media_metadata.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: .gitignore  CMakeLists.txt  flutter_media_metadata_plugin.cc  media_metadata_plus_plugin.cc
linux/include/flutter_media_metadata/: flutter_media_metadata_plugin.h
linux/include/media_metadata_plus/: media_metadata_plus_plugin.h
macos/: .gitignore  Package.swift  flutter_media_metadata.podspec  media_metadata_plus.podspec
macos/Classes/: FlutterMediaMetadataPlugin.swift  MediaMetadataPlusPlugin.swift
macos/media_metadata_plus/: Package.swift
macos/media_metadata_plus/Sources/: MediaMetadataPlusPlugin.swift
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: api.rs  exif_reader.rs  frb_generated.rs  lib.rs  mime.rs  thumbnail_reader.rs  video_reader.rs
scripts/: bump_version.sh  generate.sh  inspect.sh  test.sh
scripts/ci/: build_android.sh  build_ios.sh  build_macos.sh  ffmpeg_prebuilt_tag
test/: flutter_media_metadata_test.dart  media_metadata_plus_test.dart
test/fixtures/: .gitkeep
windows/: CMakeLists.txt  flutter_media_metadata_plugin.cpp  flutter_media_metadata_plugin.h  flutter_media_metadata_plugin_c_api.cpp  media_metadata_plus_plugin.cpp  media_metadata_plus_plugin.h  media_metadata_plus_plugin_c_api.cpp
windows/include/flutter_media_metadata/: flutter_media_metadata_plugin_c_api.h
windows/include/media_metadata_plus/: media_metadata_plus_plugin_c_api.h
